--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@types/leaflet": "^1.5.19",
+    "esri-leaflet": "^2.5.3",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
