--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@types/leaflet": "^1.5.19",
     "leaflet": "^1.7.1",
+    "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
