--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
-    "@types/leaflet": "^1.5.23",
+    "@types/leaflet": "^1.5.19",
+    "arcgis-to-geojson-utils": "^1.0.3",
+    "esri-leaflet": "^3.0.0",
     "leaflet": "^1.7.1",
     "ngx-cookie-service": "^10.1.1",
     "rxjs": "~6.6.0",
