--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@types/d3": "^6.3.0",
     "@types/leaflet": "^1.5.19",
     "arcgis-to-geojson-utils": "^1.0.3",
     "d3": "^6.7.0",
