--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@types/d3": "^6.3.0",
     "@types/leaflet": "^1.5.19",
+    "@types/plotly.js": "^1.54.13",
     "arcgis-to-geojson-utils": "^1.0.3",
     "d3": "^6.7.0",
     "esri-leaflet": "^3.0.0",
     "leaflet": "^1.7.1",
     "ngx-cookie-service": "^11.0.2",
+    "plotly.js": "^2.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
