--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:4django": "ng build --configuration production --base-href ./ && node add-django-tags.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
